# nebula-relay

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  railpack.json  turbo.json  vercel.json
.github/workflows/: build-private-prover-assets.yml
apps/api/: README.md  package.json  railway.toml
apps/api/migrations/: 001_bridge_backend.sql
apps/api/src/: config.ts  errors.ts  http.ts  index.ts  server.ts  types.ts
apps/api/src/__tests__/: private-pool.test.ts  quote.test.ts  server.test.ts  source-action.test.ts
apps/api/src/auth/: stellar.ts
apps/api/src/bridge/: cctp.ts  json.ts  private-pool.ts  prover.ts  quote.ts  source-action.ts  stellar.ts  witness.ts  worker.ts
apps/api/src/db/: client.ts  repository.ts  schema.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/public/private-prover-runtime/: LICENSE.txt  NOTICE.txt  nebula-prover-host.html  nebula-prover-host.js
apps/web/public/private-prover-runtime/circuits/: NOTICE.txt  policy_tx_2_2.wasm  selectiveDisclosure_1.r1cs  selectiveDisclosure_1.wasm
apps/web/public/private-prover-runtime/js/: prover-worker.js  storage-worker.js  storage-worker_bg.wasm  wasm-facade.js  web.js  web_bg.wasm
apps/web/public/private-prover-runtime/licenses/: GPL-3.0.txt
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/activity/: page.tsx
apps/web/src/app/activity/[intentId]/: page.tsx
apps/web/src/app/bridge/: page.tsx
apps/web/src/app/demo/: page.tsx
apps/web/src/app/docs/: page.tsx
apps/web/src/app/failure-lab/: page.tsx
apps/web/src/app/private/: page.tsx
apps/web/src/app/private-prover/: page.tsx
apps/web/src/components/: DemoConsole.tsx  FailureLab.tsx  PrivateProverConsole.tsx  RelayCanvas.tsx  ui.tsx
apps/web/src/components/nebula/: ActivityPage.tsx  BridgePage.tsx  LandingPage.tsx  ProductShell.tsx  ProgressPage.tsx  TransferDetailPage.tsx  WithdrawPage.tsx
apps/web/src/lib/: auditor.test.ts  auditor.ts  config.ts  demo.test.ts  demo.ts  evm-wallet.test.ts  evm-wallet.ts  fixtures.ts  freighter.ts  nebula-api.ts  note-backup.ts  note-vault.ts  private-prover-runtime.tsx  privateProver.test.ts  privateProver.ts  stellar-auth.ts
artifacts/: boundless-base-market-quote.json  boundless-quote.json  boundless-sdk-quote.json  dev-proof.json  live-boundless-request.json  live-cctp-forwarder-interface.json  live-cctp-settlement.json  live-iris-latest.json  live-iris-response.json  live-lock-receipt.json  live-lock-witness.json  live-remote-proof.json  live-replay-failure.txt  live-transcript-summary.json  private-pool-deployment-match.json  private-pool-readiness.json
artifacts/demo/: auditor-packet.json  demo-submission.json  localnet-demo-report.json  pool-adapter-testnet.env  pool-adapter-testnet.json  risc0-verifier-deployment.toml  testnet-contracts.env  testnet-deployment.json
contracts/evm/: foundry.toml
contracts/evm/script/: Deploy.s.sol  DeployCctpEscrow.s.sol  LockAndBurnCctp.s.sol
contracts/evm/src/: MockUSDC.sol  NebulaCctpEscrow.sol  NebulaEscrow.sol
contracts/evm/test/: NebulaCctpEscrow.t.sol  NebulaEscrow.t.sol
contracts/stellar/nebula-pool-adapter/: Cargo.toml
contracts/stellar/nebula-pool-adapter/src/: lib.rs  test.rs
contracts/stellar/nebula-relay/: Cargo.toml
contracts/stellar/nebula-relay/src/: cctp_forwarder.rs  lib.rs  pool_adapter.rs  private_pool.rs  test.rs  verifier_router.rs
deployments/: stellar-private-payments-usdc-testnet.json
fixtures/: bad-compliance.json  valid-lock.json  wrong-destination.json  wrong-escrow.json  wrong-token.json
patches/stellar-private-payments/: browser-prepare-only.patch
risc0/methods/: Cargo.toml
risc0/nebula-guest/: Cargo.toml
risc0/nebula-guest/src/: lib.rs  main.rs
risc0/nebula-host/: Cargo.toml
risc0/nebula-host/src/: lib.rs  main.rs
risc0/shared/: Cargo.toml
risc0/shared/src/: lib.rs
scripts/: bootstrap_external_docs.sh  check_private_pool_testnet.sh  check_testnet_readiness.sh  create_monorepo_skeleton.sh  demo_localnet.sh  deploy_evm_cctp_testnet.sh  deploy_localnet.sh  deploy_pool_adapter_testnet.sh  deploy_private_payments_usdc_pool.sh  deploy_testnet.sh  generate_demo_fixture.sh  prepare_private_pool_deposit.sh  private_pool_deposit_from_upstream.mjs  prove_boundless_remote.sh  quote_boundless.sh  quote_boundless_base_market.sh  quote_boundless_sdk.sh  railway_build_api.sh  run_evm_cctp_lock_testnet.sh  run_live_testnet_transcript.sh  stage_private_prover_runtime.sh  verify_submission.sh
tools/nebula-private-pool-prepare/: Cargo.toml
tools/nebula-private-pool-prepare/src/: main.rs
(+1 files in other folders)
