[package]
name = "nebula-risc0-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nebula_risc0_shared"

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
